--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,4 +41,5 @@ mmkv = { module = "com.tencent:mmkv", version.ref = "mmkv" }
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-parcelize = { id = "kotlin-parcelize" }
 
